# credit_card_fraud_detection

./: .env.example  .gitignore  README.md  dvc.yaml  mlflow.db  promote_model.py  pyproject.toml  run.ps1  setup.ps1
.github/workflows/: cd_pipeline.yml  ci_pipeline.yml
api/: Dockerfile  main.py  schemas.py
configs/: model_config.yaml
monitoring/: generate_report.py
notebooks/: EDA.ipynb
orchestration/: __init__.py  assets.py  schedules.py
src/: evaluate.py  train.py  validate.py
tests/: test_api.py  test_model.py
